--- a/learnpython/user/templates/user/Email.html
+++ b/learnpython/user/templates/user/Email.html
@@ -12,7 +12,7 @@
             <section style="margin: 0 15px;color:#425b76;">
                 <h2 style="margin: 40px 0 27px 0;text-align: center;">Спасибо за региcтрацию!</h2>
                 <hr style="border:0;border-top: 1px solid rgba(66,91,118,0.3);max-width: 50%">
-                <p style="font-size:15.5px;font-weight: bold;margin:40px 20px 15px 20px;">Hi {{username}}, мы получили ваши данные, можете авторизоваться.</p>
+                <p style="font-size:15.5px;font-weight: bold;margin:40px 20px 15px 20px;">Здравствуйте {{username}}, мы получили ваши данные, можете авторизоваться.</p>
             </section>
         </div>
     </body>
