--- a/learnpython/user/templates/user/layout.html
+++ b/learnpython/user/templates/user/layout.html
@@ -67,10 +67,9 @@
         </div>
         <div class="collapse navbar-collapse" id="mainNavBar">
           <ul class="nav navbar-nav navbar-right">
-            <li><a href="{% url "index" %}">Главная</a></li>
+            <li><a href="{% url "index" %}"><i class="fa fa-home"></i> Главная</a></li>
 
             {% if user.is_authenticated %}
-            <li><a href="{% url "logout" %}"><span class="glyphicon glyphicon-log-out"></span>   Выйти</a></li>
             {% else %}
             <li><a href="{% url "register" %}"><span class="glyphicon glyphicon-user"></span>   Регистрация</a></li>
             <li><a href="{% url "login" %}"><span class="glyphicon glyphicon-log-in"></span>   Вход</a></li>
