--- a/learnpython/user/templates/user/login.html
+++ b/learnpython/user/templates/user/login.html
@@ -10,7 +10,7 @@
        {{ form|crispy }}
     </fieldset>
    <center>
-    <button style="background: black; font-size: 2rem; padding:1%;" class="btn btn-outline-info" type="submit"><span class="glyphicon glyphicon-log-in"></span>   вход</button>
+    <button style="background: black; font-size: 2rem; padding:1%; color: white;" class="btn btn-outline-info" type="submit"><span class="glyphicon glyphicon-log-in"></span>  Вход</button>
   </center>
   <br/>
   <sub style="text-align: left;"><a href="{% url 'register' %}" style="text-decoration: none; color: blue; padding:2%; cursor:pointer; margin-right:2%;">нет аккаунта? регистрация.</a></sub>
